--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
                                 <li><a href="#void">submenu1</a></li>
                                 <li><a href="#void">submenu2</a></li>
                                 <li><a href="#void">submenu3</a></li>
+                                <li><a href="#void">submenu1</a></li>
+                                <li><a href="#void">submenu2</a></li>
+                                <li><a href="#void">submenu3</a></li>
                             </ul>
                         </li>
                         <li>
